@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-01
+2011-10-04 Andy Salnikov
+- CsPadCommonModeSubV1 and CsPadFilterV1 now can be initialized through
+  constructor parameters without reading data from files
+
 Tag: V00-01-00
 2011-10-04 Andy Salnikov
 - CsPadCommonModeSubV1::findCommonMode() now takes int16_t* for image data
